@@ -76,7 +76,7 @@ listeningService = """
 
 # takes a CSS class and a group name
 groupName = """
-    <tr class="%s"><td colspan="4" class="servHeader">%s
+    <tr class="%s"><td colspan="5" class="servHeader">%s
     """
 
 
@@ -119,16 +119,18 @@ groupHeaderForm = """
     </table>
     </td>
     </tr>
-    <tr class="%s"><th colspan="2">hosts</th>
-    <th>open</th><th>total</th></tr>
+    <tr class="%s">
+    <th colspan="2">hosts</th><th>open</th><th>total</th><th>failed</th>
+    </tr>
     """
 
 
 # takes CSS class, hostname, host, open connections, total connections as well
 # as urllib-quoted service name, group name, and host
 hostInfo = """
-    <tr class="%s"><td>%s</td><td><tt>%s</tt></td>
-    <td>%s</td><td>%s</td>
+    <tr class="%s">
+    <td>%s</td><td><tt>%s</tt></td>
+    <td>%s</td><td>%s</td><td>%s</td>
     <td><div class="deleteButton">
     <a href="delHost?service=%s&group=%s&ip=%s">remove host</a>
     </div></td>
